# agentsesh

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  ROADMAP.md  audit-prd.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.sesh/: .gitignore  config.json
docs/: CNAME  index.html
docs/adr/: 001-zero-dependencies.md
eval/: README.md  run_eval.py  run_phrasing_eval.py
eval/configs/: bad.md  patched.md
eval/results/: bad-20260313-131309.json  bad-20260313-131712.json  bad-20260313-131854.json  bad-20260313-132054.json  patched-20260313-132407.json
eval/results/phrasing/: phrasing-20260313-134646.json
eval/tasks/: build_cli.md
eval/tasks/phrasing/: buggy_cache.py  bugs.json
eval/transcripts/: bad-20260313-131712.jsonl  bad-20260313-131854.jsonl  bad-20260313-132054.jsonl  patched-20260313-132407.jsonl
sesh/: README.md  __init__.py  __main__.py  analyze.py  cli.py  config.py  db.py  debug.py  feedback.py  live.py  mcp_server.py  replay.py  watch.py
sesh/analyzers/: __init__.py  collaboration.py  grader.py  outcome_grader.py  outcomes.py  patterns.py  profile.py  profile_remediation.py  remediation.py  session_type.py  trends.py
sesh/audit/: __init__.py  engine.py  formatter.py  metrics.py
sesh/commands/: __init__.py  _resolve.py  analysis.py  debug.py  ingest.py  replay.py
sesh/formatters/: __init__.py  handoff.py  json_out.py  report.py
sesh/parsers/: __init__.py  base.py  claude_code.py  openai_codex.py
sesh/tui/: __init__.py  app.py  panels.py  widgets.py
sesh/web/: __init__.py  server.py
tests/: README.md  test_analyze.py  test_audit_engine.py  test_audit_metrics.py  test_cli.py  test_collaboration.py  test_debug.py  test_feedback.py  test_grader.py  test_live.py  test_openai_parser.py  test_outcome_grader.py  test_outcomes.py  test_parser.py  test_patterns.py  test_profile_collaboration.py  test_profile_remediation.py  test_remediation.py  test_replay.py  test_ux.py  test_watch.py
