[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agentsesh"
version = "0.1.0"
description = "Agent session intelligence — behavioral analysis, grading, and handoff for AI agent sessions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
sesh = "sesh.cli:main"

[project.urls]
Homepage = "https://agentsesh.com"
Repository = "https://github.com/ateeples/agentsesh"

[tool.setuptools.packages.find]
include = ["sesh*"]
