[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentsesh"
version = "0.9.0"
description = "Agent session intelligence — behavioral analysis, grading, remediation, replay, outcome testing, and prompt debugging for AI agent sessions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
all = ["mcp>=1.0"]

[project.scripts]
sesh = "sesh.cli:main"
sesh-mcp = "sesh.mcp_server:main"
sesh-web = "sesh.web.server:main"

[project.urls]
Homepage = "https://agentsesh.com"
Repository = "https://github.com/ateeples/agentsesh"

[tool.setuptools.packages.find]
include = ["sesh*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]
